correcao dos erros na pagina principal

--- a/site/index.html
+++ b/site/index.html
@@ -16,8 +16,8 @@
     </div>
     <div class="col-md-9">
         <h2>Amanda Aurita Araujo Fernandes</h2>
-        <p>22 years - Brazilian</p>
-        <p>iOS,Web Developer and Programming Teacher</p>
+        <p>23 years - Brazilian</p>
+        <p>iOS, Web Developer and Programming Teacher</p>
         <p>amanda.aurita.rj@gmail.com</p>
         <a href="https://www.linkedin.com/in/amandaaurita" target="_blank">
             <img alt="Linkedin" src="public/linkedin.png" width="48" height="48">
@@ -52,7 +52,7 @@
             <p>Passionate about <b>technology</b> and challenges, I was introduced to a "different world" when I decided to study telecommunication in high school.</p>
             <p>In December of 2011, I finished high-school and became a <b>Telecommunication Technician</b>.</p>
             <p>Today, I am finishing my undergraduate studies in <b>Information Systems</b> at PUC Rio and I love what I do!</p>
-            <p>I wad part of <b>BEPiD Rio</b> and I am always looking for something new to learn.</p>
+            <p>I was part of <b>BEPiD Rio</b> and I am always looking for something new to learn.</p>
 
             <h3>Events</h3>
             <!-- WWDC-->
